Enabled download of solutions and fixed typo in Ex.5

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <a href="download/Exercise_5.pdf" download class="enabled">
             <i class="fa-solid fa-download"></i> EXERCISE 5
           </a>  
-          <a href="download/Exercise_4_sol.pdf" download class="disabled">
+          <a href="download/Exercise_5_sol.pdf" download class="enabled">
             <i class="fa-solid fa-download"></i> EXERCISE 5 - WITH SOLUTION
           </a>  
         </div>
