Added content for next weeks, until Week 10

--- a/index.html
+++ b/index.html
@@ -281,17 +281,53 @@
         </div>
       </div> 
 
-      <div class="accordion-item">Week 7</div>
-      <div class="accordion-content"><p>More content soon...</p></div>
+      <div class="accordion-item">Week 7 - FEEDBACK AND THE ROOT LOCUS METHOD</div>
+      <div class="accordion-content">
+        <div class="buttons" style="margin-top:15px;">
+          <a href="download/Exercise_3.pdf" download class="disabled">
+            <i class="fa-solid fa-download"></i> EXERCISE 7
+          </a>  
+          <a href="download/Exercise_3_sol.pdf" download class="disabled">
+            <i class="fa-solid fa-download"></i> EXERCISE 7 - WITH SOLUTION
+          </a>  
+        </div>
+      </div>
 
-      <div class="accordion-item">Week 8</div>
-      <div class="accordion-content"><p>More content soon...</p></div>
+      <div class="accordion-item">Week 8 - SYSTEM SPECIFICATIONS</div>
+      <div class="accordion-content">
+        <div class="buttons" style="margin-top:15px;">
+          <a href="download/Exercise_3.pdf" download class="disabled">
+            <i class="fa-solid fa-download"></i> EXERCISE 8
+          </a>  
+          <a href="download/Exercise_3_sol.pdf" download class="disabled">
+            <i class="fa-solid fa-download"></i> EXERCISE 8 - WITH SOLUTION
+          </a>  
+        </div>
+      </div>
 
-      <div class="accordion-item">Week 9</div>
-      <div class="accordion-content"><p>More content soon...</p></div>
+      <div class="accordion-item">Week 9 - FREQUENCY RESPONSE</div>
+      <div class="accordion-content">
+        <div class="buttons" style="margin-top:15px;">
+          <a href="download/Exercise_3.pdf" download class="disabled">
+            <i class="fa-solid fa-download"></i> EXERCISE 9
+          </a>  
+          <a href="download/Exercise_3_sol.pdf" download class="disabled">
+            <i class="fa-solid fa-download"></i> EXERCISE 9 - WITH SOLUTION
+          </a>  
+        </div>
+      </div>
 
-      <div class="accordion-item">Week 10</div>
-      <div class="accordion-content"><p>More content soon...</p></div>
+      <div class="accordion-item">Week 10 - POLAR PLOTS AND THE NYQUIST CONDITION</div>
+      <div class="accordion-content">
+        <div class="buttons" style="margin-top:15px;">
+          <a href="download/Exercise_3.pdf" download class="disabled">
+            <i class="fa-solid fa-download"></i> EXERCISE 10
+          </a>  
+          <a href="download/Exercise_3_sol.pdf" download class="disabled">
+            <i class="fa-solid fa-download"></i> EXERCISE 10 - WITH SOLUTION
+          </a>  
+        </div>
+      </div>
 
       <div class="accordion-item">Week 11</div>
       <div class="accordion-content"><p>More content soon...</p></div>
