--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
       <div class="accordion-item">Week 6 - POLES AND ZEROS</div>
       <div class="accordion-content">
         <div class="buttons" style="margin-top:15px;">
-          <a href="download/Exercise_3.pdf" download class="disabled">
+          <a href="download/Exercise_6.pdf" download class="enabled">
             <i class="fa-solid fa-download"></i> EXERCISE 6
           </a>  
-          <a href="download/Exercise_3_sol.pdf" download class="disabled">
+          <a href="download/Exercise_6_sol.pdf" download class="disabled">
             <i class="fa-solid fa-download"></i> EXERCISE 6 - WITH SOLUTION
           </a>  
         </div>
