Added Ex6sol to the website

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <a href="download/Exercise_6.pdf" download class="enabled">
             <i class="fa-solid fa-download"></i> EXERCISE 6
           </a>  
-          <a href="download/Exercise_6_sol.pdf" download class="disabled">
+          <a href="download/Exercise_6_sol.pdf" download class="enabled">
             <i class="fa-solid fa-download"></i> EXERCISE 6 - WITH SOLUTION
           </a>  
         </div>
