updated website for week 7

--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
       <div class="accordion-item">Week 7 - FEEDBACK AND THE ROOT LOCUS METHOD</div>
       <div class="accordion-content">
         <div class="buttons" style="margin-top:15px;">
-          <a href="download/Exercise_3.pdf" download class="disabled">
+          <a href="download/Exercise_7.pdf" download class="enabled">
             <i class="fa-solid fa-download"></i> EXERCISE 7
           </a>  
-          <a href="download/Exercise_3_sol.pdf" download class="disabled">
+          <a href="download/Exercise_7_sol.pdf" download class="disabled">
             <i class="fa-solid fa-download"></i> EXERCISE 7 - WITH SOLUTION
           </a>  
         </div>
