--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           <a href="download/Exercise_7.pdf" download class="enabled">
             <i class="fa-solid fa-download"></i> EXERCISE 7
           </a>  
-          <a href="download/Exercise_7_sol.pdf" download class="disabled">
+          <a href="download/Exercise_7_sol.pdf" download class="enabled">
             <i class="fa-solid fa-download"></i> EXERCISE 7 - WITH SOLUTION
           </a>  
         </div>
